apps/prod/vitafinder/storefront/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vitafinder-storefront
  labels:
    app.kubernetes.io/name: vitafinder-storefront
    app.kubernetes.io/part-of: vita-finder
    talay.io/environment: prod
spec:
  ingressClassName: traefik
  tls:
    - secretName: vitafinder-storefront-tls
      hosts:
        - vita-pick.com
        - www.vita-pick.com
  rules:
    - host: vita-pick.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vitafinder-storefront
                port:
                  number: 80
    - host: www.vita-pick.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vitafinder-storefront
                port:
                  number: 80
